added team project to portfolio

--- a/index.html
+++ b/index.html
@@ -58,11 +58,14 @@
                 </section>
 
                 <section class="work">
-                <header>ADVANCED CSS</header> <!--add when completed-->
-                <!-- <a href="https://vihuynhco.github.io/-----" target="_blank"-->
-                <img src="./assets/images/image5.JPG" alt="screenshot of work" class="project_image">
+                <header> Team Project: <br> Cocktails to Flock Your Tails</header> <!--add when completed-->
+                <a href="https://diamante710.github.io/Cocktail-Master-Project-One/" target="_blank">
+                <img src="./assets/images/team project.png" alt="screenshot of work" class="project_image">
                 </a>
-                <p>Description of project and image goes here. </p>
+                <p>We created an application that provides instructions on how to properly mix popular cocktails of your choosing while simultaneously  displaying hilariously funny jokes.
+                    When you land of the page, you select a primary ingredient from a drop-down list to display images of drinks that contains the selected ingredient.  When you hover over an image, you’re presented with the cocktail name and instructions on how to mix the drink. 
+                    Every time that you select a new ingredient you are also presented with a new random joke that is stored in local storage and visible to reference later. 
+                    </p>
                 </section>
                 
                 <section class="work">
@@ -91,7 +94,7 @@
                 <ul>
                 <li class="contactinfo"><a href="#mailt0:vihuynhco@gmail.com" alt="email address">Email: vihuynhco@gmail.com</a></li>
                 <li class="contactinfo"><a href="#telephone:555-555-5555" alt="phone number">Phone: 555-555-5555</a></li>
-                <li class="contactinfo"><a href="#https://github.com:" alt="Hyperlink github">Github URL: github</a></li>
+                <li class="contactinfo"><a href="#https://github.com:" alt="Hyperlink github">Github</a></li>
                 </ul>
             </section>
         </section>
